Added text on image

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,29 +20,46 @@ body {
   box-sizing: inherit;
 }
 
-/* End basic styles */
-
 Img {
   width: 100%;
   height: auto;
   display: block;
 }
 
-p {
-  color: purple;
+/* End basic styles */
+
+/* Begin Hero Styles */
+.hero-box {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 0px;
+  align-content: center;
+  justify-content: center;
+  align-items: start;
+  height: 100%;
+  width: 100%;
 }
 
-.myColor {
-  color: red;
-  font-size: 56px;
+.hero-Img-box {
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
 }
 
-.myColorTwo {
-  color: blue;
-  font-size: 75px;
-  font-weight: bold;
+.hero-Img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
 }
 
-h1 {
-  color: skyblue;
+.hero-text-box {
+  grid-row: 1 / -1;
+  grid-column: 1 / -1;
+  align-self: center;
+  padding: 1rem;
+  z-index: 10;
+  text-align: center;
 }
