--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
   margin: 0 auto;
   padding: 0;
   min-height: 100%;
-  max-height: 100%;
+  max-width: 100%;
 }
 
 *,
@@ -20,13 +20,12 @@ body {
   box-sizing: inherit;
 }
 
-Img {
+img {
   width: 100%;
   height: auto;
   display: block;
 }
-
-/* End basic styles */
+/* End basic Styles */
 
 /* Begin Hero Styles */
 .hero-box {
@@ -41,7 +40,7 @@ Img {
   width: 100%;
 }
 
-.hero-Img-box {
+.hero-image-box {
   height: 100vh;
   width: 100%;
   display: grid;
@@ -49,7 +48,7 @@ Img {
   grid-row: 1 / -1;
 }
 
-.hero-Img {
+.hero-image {
   width: 100%;
   height: 100%;
   object-fit: fill;
@@ -62,4 +61,51 @@ Img {
   padding: 1rem;
   z-index: 10;
   text-align: center;
+}
+
+.hero-image-box::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(145, 73, 40, 0.4);
+}
+
+.hero-heading {
+  font-size: 2rem;
+  line-height: 3rem;
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.hero-text {
+  font-size: 3rem;
+  color: white;
+}
+
+/* Media Queries Below */
+
+@media (min-width: 600px) {
+  .hero-heading {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+  .hero-text {
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 920px) {
+  .hero-heading {
+    font-size: 7rem;
+    line-height: 7rem;
+  }
+  .hero-text {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
 }
