--- a/css/styles.css
+++ b/css/styles.css
@@ -49,9 +49,11 @@ img {
 }
 
 .hero-image {
+  display: grid;
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: cover;
+  overflow: hidden;
 }
 
 .hero-text-box {
@@ -65,7 +67,7 @@ img {
 
 .hero-image-box::after {
   content: "";
-  height: 100%;
+  height: 100vh;
   width: 100%;
   position: absolute;
   top: 0;
