Made grid gallery and fixed up images

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,38 @@ img {
   color: white;
 }
 
+.portfolio-container {
+  margin: 1rem auto 0 auto;
+}
+
+.portfolio-container h1 {
+  font-size: 2rem;
+  line-height: 3rem;
+  color: lightslategray;
+}
+.portfolio-gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 1rem;
+  grid-auto-rows: 300px;
+}
+
+.gallery-item {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.gallery-img {
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s ease-in-out;
+}
+
+.gallery-img:hover {
+  transform: scale(1.5);
+}
+
 /* Media Queries Below */
 
 @media (min-width: 600px) {
@@ -99,6 +131,11 @@ img {
     font-size: 2.5rem;
     line-height: 2.5rem;
   }
+  .portfolio-container h1 {
+    font-size: 3 rem;
+    line-height: 3 rem;
+    padding-left: 1 rem;
+  }
 }
 
 @media (min-width: 920px) {
@@ -107,6 +144,13 @@ img {
     line-height: 7rem;
   }
   .hero-text {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+  .portfolio-container {
+    max-width: 1400px;
+  }
+  .portfolio-container h1 {
     font-size: 4rem;
     line-height: 4rem;
   }
