--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
   padding: 0;
   min-height: 100%;
   max-width: 100%;
+  padding-bottom: 5rem;
 }
 
 *,
@@ -48,12 +49,21 @@ img {
   grid-row: 1 / -1;
 }
 
-.hero-image {
+.hero-image,
+.hero-video {
   display: grid;
   width: 100%;
   height: 100%;
   object-fit: cover;
   overflow: hidden;
+}
+
+.hero-video {
+  background-color: black;
+  background-image: url("../img/Look at this thing reencoded.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .hero-text-box {
@@ -120,6 +130,38 @@ img {
   transform: scale(1.5);
 }
 
+.about-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 1rem auto 0 auto;
+}
+
+.about-text {
+  margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.about-text h1 {
+  font-size: 2rem;
+  line-height: 2rem;
+}
+
+.about-social {
+  display: flex;
+  justify-content: start;
+}
+
+.about-social a {
+  color: black;
+  padding: 0 1rem 1rem 1rem;
+}
+
+.about-image img {
+  height: 100%;
+  object-fit: cover;
+}
+
 /* Media Queries Below */
 
 @media (min-width: 600px) {
@@ -135,6 +177,19 @@ img {
     font-size: 3 rem;
     line-height: 3 rem;
     padding-left: 1 rem;
+  }
+  .about-container {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+  }
+  .about-text h1 {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+
+  .about-text p {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
   }
 }
 
@@ -153,5 +208,19 @@ img {
   .portfolio-container h1 {
     font-size: 4rem;
     line-height: 4rem;
+  }
+
+  .about-container {
+    max-width: 1400px;
+  }
+
+  .about text h1 {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+
+  .about-text p {
+    font-size: 1.8rem;
+    line-height: 2.1rem;
   }
 }
