Changed link sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,11 @@ img {
 .about-social a {
   color: black;
   padding: 0 1rem 1rem 1rem;
+  font-size: 2 rem;
+}
+
+.about-social a:hover {
+  color: darkslateblue;
 }
 
 .about-image img {
@@ -191,6 +196,10 @@ img {
     font-size: 1.2rem;
     line-height: 1.6rem;
   }
+
+  .about-social a {
+    font-size: 3rem;
+  }
 }
 
 @media (min-width: 920px) {
@@ -222,5 +231,9 @@ img {
   .about-text p {
     font-size: 1.8rem;
     line-height: 2.1rem;
+  }
+
+  .about-social a {
+    font-size: 4rem;
   }
 }
